--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="en" >
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Météo</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+  <title>Reeves World</title> 
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+  <div id="root" style="margin: 0px"></div>
+  <script src='http://unpkg.com/react/umd/react.development.js'></script>
+  <script src='http://unpkg.com/react-dom/umd/react-dom.development.js'></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.min.js"></script>
+  <script src="assets\js\2.2215038e.chunk.js"></script>
+  <script src="assets\js\main.3b0cb942.chunk.js"></script>
+  <script src="assets\css\2.43d354e1.chunk.css"></script>
+  <script src="assets\css\main.975d27c1.chunk.css"></script>
+  <script src="assets\js\runtime~main.a8a9905a.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+</body>
+<footer class="page-footer font-small mdb-color darken-3 pt-4">
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-6">
+        <div id="map-container" class="z-depth-1-half map-container" style="height: 200px">
+          <iframe src="https://maps.google.com/maps?q=montréal&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+            style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="footer-copyright text-center py-3" style="color :white;"><img src="img/seal.png" alt="image" class="pull-right" style="width:4%;height:4%;"/>© 2019 Copyright
+    <a href="http://www.je-parle-quebecois.com/lexique/definition/guidoune.html">Guidoune Man<img src="img/GuidouneMan2.png" alt="image" class="pull-right" style="width:5%;height:5%;"/></a>
+  </div>
+</footer>
 </html>
