--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <script src='http://unpkg.com/react/umd/react.development.js'></script>
   <script src='http://unpkg.com/react-dom/umd/react-dom.development.js'></script>
   <script src="https://unpkg.com/prop-types@15.6/prop-types.min.js"></script>
-  <script src="assets\js\2.2215038e.chunk.js"></script>
-  <script src="assets\js\main.3b0cb942.chunk.js"></script>
-  <script src="assets\css\2.43d354e1.chunk.css"></script>
-  <script src="assets\css\main.975d27c1.chunk.css"></script>
-  <script src="assets\js\runtime~main.a8a9905a.js"></script>
+  <script src="assets\static\js\2.2215038e.chunk.js"></script>
+  <script src="assets\static\js\main.3b0cb942.chunk.js"></script>
+  <script src="assets\static\css\2.43d354e1.chunk.css"></script>
+  <script src="assets\static\css\main.975d27c1.chunk.css"></script>
+  <script src="assets\static\js\runtime~main.a8a9905a.js"></script>
 
 </body>
 <footer class="page-footer font-small mdb-color darken-3 pt-4">
